--- a/app/src/main/res/layout/activity_example.xml
+++ b/app/src/main/res/layout/activity_example.xml
@@ -8,7 +8,8 @@
 
     <com.jkjk.pagingscrollview.PagingScrollView
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:id="@+id/scrollView">
 
         <LinearLayout
                 android:layout_width="match_parent"
@@ -18,18 +19,21 @@
             <View
                     android:layout_width="match_parent"
                     android:layout_height="700dp"
+                    android:id="@+id/first"
                     android:background="@android:color/holo_red_light"/>
 
 
             <View
                     android:layout_width="match_parent"
                     android:layout_height="400dp"
+
                     android:background="@android:color/holo_green_dark"/>
 
 
             <View
                     android:layout_width="match_parent"
                     android:layout_height="900dp"
+                    android:id="@+id/third"
                     android:background="@android:color/holo_blue_dark"/>
 
 
