--- a/app/src/main/res/layout/activity_example.xml
+++ b/app/src/main/res/layout/activity_example.xml
@@ -29,6 +29,10 @@
 
                     android:background="@android:color/holo_green_dark"/>
 
+            <android.support.v7.widget.RecyclerView
+                    android:id="@+id/recyclerView"
+                    android:layout_width="match_parent"
+                    android:layout_height="400dp"/>
 
             <View
                     android:layout_width="match_parent"
